Fix flex spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ section {
 	margin: 0;
 	max-width: none;
 	font-family: 'Lato', sans-serif;
-	position: relative;
 }
 .intro {
 	background-color: #000000;
